Fix readability of light text colours

--- a/src/post-bootstrap.scss
+++ b/src/post-bootstrap.scss
@@ -27,6 +27,11 @@ body,
 	text-shadow: 1px 0 black, 0 1px black, 1px 1px black;
 }
 
+.badge-light,
+.list-group-item-light.active {
+	text-shadow: 1px 0 $gray-500, 0 1px $gray-500, 1px 1px $gray-500;
+}
+
 // Box outline
 .card,
 .btn:not(.btn-link):not(:focus),
@@ -103,4 +108,8 @@ a.btn:not(.btn-link):focus {
 			}
 		}
 	}
+}
+
+.list-group-item-action.list-group-item-light.active {
+	color: black;
 }
